--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                     <a href="#comprar">Comprar</a>
                 </li>
                 <li>
-                    <a href="https://support.rockstargames.com/categories/200013306" target="_blank">suporte</a>
-                    <img src="./src/imagens/icone-link.svg" alt="Icone de link suporte">
+                    <a href="https://support.rockstargames.com/categories/200013306" target="_blank">suporte
+                        <img src="./src/imagens/icone-link.svg" alt="Icone de link suporte">
+                    </a>                    
                 </li>
             </ul>
         </nav>
