--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto GTA</title>
+    
+    <link rel="shortcut icon" href="./src/imagens/favicon.png" type="image/x-ion">   
+    <link href="https://fonts.cdnfonts.com/css/chalet" rel="stylesheet">   
+   
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/styles.css">
-    <link rel="shortcut icon" href="./src/imagens/favicon.png" type="image/x-ion">   
-    <link href="https://fonts.cdnfonts.com/css/chalet" rel="stylesheet">               
+    <link rel="stylesheet" href="./src/css/fontes.css">            
                 
 </head>
 <body>
