--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
    
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/styles.css">
-    <link rel="stylesheet" href="./src/css/fontes.css">            
-                
+    <link rel="stylesheet" href="./src/css/fontes.css"> 
+    <link rel="stylesheet" href="./src/css/responsive.css">
 </head>
 <body>
 
