--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
             </button>
 
         </div>
-    </section>    
+    </section> 
+
+    <script src="./src/js/index.js"></script>   
+
 </body>
 </html>
